--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vue": "^2.6.12",
     "vue-class-component": "^7.2.6",
     "vue-property-decorator": "^9.1.2",
+    "vue-qrcode-reader": "^3.1.0",
     "vue-router": "^3.5.1",
     "vuetify": "^2.4.9",
     "vuex": "^3.6.2",
