--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/composition-api": "^1.4.9",
     "core-js": "^3.10.0",
     "material-design-icons-iconfont": "^6.1.0",
     "vue": "^2.6.12",
@@ -20,28 +21,31 @@
   },
   "devDependencies": {
     "@types/jest": "^26.0.22",
-    "@typescript-eslint/eslint-plugin": "^2.33.0",
-    "@typescript-eslint/parser": "^2.33.0",
-    "@vue/cli-plugin-babel": "^4.5.12",
-    "@vue/cli-plugin-eslint": "^4.5.12",
-    "@vue/cli-plugin-router": "^4.5.12",
-    "@vue/cli-plugin-typescript": "^4.5.12",
-    "@vue/cli-plugin-unit-jest": "^4.5.12",
-    "@vue/cli-plugin-vuex": "^4.5.12",
-    "@vue/cli-service": "^4.5.12",
-    "@vue/eslint-config-standard": "^5.1.2",
-    "@vue/eslint-config-typescript": "^5.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
+    "@vue/cli-plugin-babel": "^5.0.1",
+    "@vue/cli-plugin-eslint": "^5.0.1",
+    "@vue/cli-plugin-router": "^5.0.1",
+    "@vue/cli-plugin-typescript": "^5.0.1",
+    "@vue/cli-plugin-unit-jest": "^5.0.1",
+    "@vue/cli-plugin-vuex": "^5.0.1",
+    "@vue/cli-service": "^5.0.1",
+    "@vue/eslint-config-standard": "^6.1.0",
+    "@vue/eslint-config-typescript": "^9.1.0",
     "@vue/test-utils": "^1.1.3",
-    "eslint": "^6.7.2",
-    "eslint-plugin-import": "^2.20.2",
+    "@vue/vue2-jest": "^27.0.0-alpha.3",
+    "eslint": "^7.32.0",
+    "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^6.2.2",
+    "eslint-plugin-vue": "^8.0.3",
+    "jest": "^27.1.0",
     "sass": "^1.32.8",
     "sass-loader": "^10.1.1",
-    "typescript": "~4.2.3",
-    "vue-cli-plugin-vuetify": "^2.3.1",
+    "ts-jest": "^27.0.4",
+    "typescript": "~4.5.5",
+    "vue-cli-plugin-vuetify": "^2.4.7",
     "vue-template-compiler": "^2.6.12",
     "vuetify-loader": "^1.7.2"
   }
