--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/cli": "^5.0.1",
     "@vue/composition-api": "^1.4.9",
     "core-js": "^3.10.0",
     "material-design-icons-iconfont": "^6.1.0",
+    "serve": "^13.0.2",
     "vue": "^2.6.12",
     "vue-class-component": "^7.2.6",
     "vue-property-decorator": "^9.1.2",
