--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@vue/composition-api": "^1.4.9",
     "core-js": "^3.10.0",
     "material-design-icons-iconfont": "^6.1.0",
-    "serve": "^13.0.2",
+    "register-service-worker": "^1.7.2",
+    "ssl-serve": "^6.5.8",
     "vue": "^2.6.12",
     "vue-class-component": "^7.2.6",
     "vue-property-decorator": "^9.1.2",
@@ -27,6 +28,7 @@
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "^5.0.1",
     "@vue/cli-plugin-eslint": "^5.0.1",
+    "@vue/cli-plugin-pwa": "^5.0.1",
     "@vue/cli-plugin-router": "^5.0.1",
     "@vue/cli-plugin-typescript": "^5.0.1",
     "@vue/cli-plugin-unit-jest": "^5.0.1",
