--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vuetify-mobile-app2",
+  "name": "simus-pwa",
   "version": "0.2.0",
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -9,6 +9,7 @@
   "dependencies": {
     "@vue/cli": "^5.0.1",
     "@vue/composition-api": "^1.4.9",
+    "axios": "^0.26.1",
     "core-js": "^3.10.0",
     "material-design-icons-iconfont": "^6.1.0",
     "register-service-worker": "^1.7.2",
