--- a/package.json
+++ b/package.json
@@ -12,16 +12,13 @@
     "axios": "^0.26.1",
     "core-js": "^3.10.0",
     "material-design-icons-iconfont": "^6.1.0",
-    "register-service-worker": "^1.7.2",
     "ssl-serve": "^6.5.8",
     "vue": "^2.6.12",
     "vue-class-component": "^7.2.6",
     "vue-property-decorator": "^9.1.2",
     "vue-qrcode-reader": "^3.1.0",
     "vue-router": "^3.5.1",
-    "vuetify": "^2.4.9",
-    "vuex": "^3.6.2",
-    "vuex-class": "^0.3.2"
+    "vuetify": "^2.4.9"
   },
   "devDependencies": {
     "@types/jest": "^26.0.22",
@@ -29,11 +26,9 @@
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "^5.0.1",
     "@vue/cli-plugin-eslint": "^5.0.1",
-    "@vue/cli-plugin-pwa": "^5.0.1",
     "@vue/cli-plugin-router": "^5.0.1",
     "@vue/cli-plugin-typescript": "^5.0.1",
     "@vue/cli-plugin-unit-jest": "^5.0.1",
-    "@vue/cli-plugin-vuex": "^5.0.1",
     "@vue/cli-service": "^5.0.1",
     "@vue/eslint-config-standard": "^6.1.0",
     "@vue/eslint-config-typescript": "^9.1.0",
