--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "pwa-build": "vue-cli-service build --mode pwalocalserve",
+    "pwa-serve": "npm run pwa-build && serve -s dist -l 8080"
   },
   "dependencies": {
     "@vue/cli": "^5.0.1",
@@ -18,18 +20,25 @@
     "vue-property-decorator": "^9.1.2",
     "vue-qrcode-reader": "^3.1.0",
     "vue-router": "^3.5.1",
-    "vuetify": "^2.4.9"
+    "vuetify": "^2.4.9",
+    "workbox-cacheable-response": "^6.1.5",
+    "workbox-core": "^6.1.5",
+    "workbox-expiration": "^6.1.5",
+    "workbox-precaching": "^6.1.5",
+    "workbox-routing": "^6.1.5",
+    "workbox-strategies": "^6.1.5",
+    "workbox-window": "^6.1.5"
   },
   "devDependencies": {
     "@types/jest": "^26.0.22",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
-    "@vue/cli-plugin-babel": "^5.0.1",
-    "@vue/cli-plugin-eslint": "^5.0.1",
-    "@vue/cli-plugin-router": "^5.0.1",
-    "@vue/cli-plugin-typescript": "^5.0.1",
-    "@vue/cli-plugin-unit-jest": "^5.0.1",
-    "@vue/cli-service": "^5.0.1",
+    "@vue/cli-plugin-babel": "^5.0.3",
+    "@vue/cli-plugin-eslint": "^5.0.3",
+    "@vue/cli-plugin-router": "^5.0.3",
+    "@vue/cli-plugin-typescript": "^5.0.3",
+    "@vue/cli-plugin-unit-jest": "^5.0.3",
+    "@vue/cli-service": "^5.0.3",
     "@vue/eslint-config-standard": "^6.1.0",
     "@vue/eslint-config-typescript": "^9.1.0",
     "@vue/test-utils": "^1.1.3",
@@ -46,7 +55,9 @@
     "ts-jest": "^27.0.4",
     "typescript": "~4.5.5",
     "vue-cli-plugin-vuetify": "^2.4.7",
+    "vue-cli-plugin-workbox-pwa": "~0.1.3",
     "vue-template-compiler": "^2.6.12",
-    "vuetify-loader": "^1.7.2"
+    "vuetify-loader": "^1.7.2",
+    "workbox-webpack-plugin": "^6.1.5"
   }
 }
