--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vue/composition-api": "^1.4.9",
     "axios": "^0.26.1",
     "core-js": "^3.10.0",
+    "localforage": "^1.10.0",
     "material-design-icons-iconfont": "^6.1.0",
     "ssl-serve": "^6.5.8",
     "vue": "^2.6.12",
