--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "simus-pwa",
+  "name": "simus-totem-virtuale",
   "version": "0.2.0",
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -16,6 +16,7 @@
     "localforage": "^1.10.0",
     "material-design-icons-iconfont": "^6.1.0",
     "ssl-serve": "^6.5.8",
+    "url-slug": "^3.0.3",
     "vue": "^2.6.12",
     "vue-class-component": "^7.2.6",
     "vue-property-decorator": "^9.1.2",
