prima di esplorazione varianti simus.vue

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vue-qrcode-reader": "^3.1.0",
     "vue-router": "^3.5.1",
     "vuetify": "^2.4.9",
+    "workbox-build": "^6.5.1",
     "workbox-cacheable-response": "^6.1.5",
     "workbox-core": "^6.1.5",
     "workbox-expiration": "^6.1.5",
@@ -35,12 +36,12 @@
     "@types/jest": "^26.0.22",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
-    "@vue/cli-plugin-babel": "^5.0.3",
-    "@vue/cli-plugin-eslint": "^5.0.3",
-    "@vue/cli-plugin-router": "^5.0.3",
-    "@vue/cli-plugin-typescript": "^5.0.3",
-    "@vue/cli-plugin-unit-jest": "^5.0.3",
-    "@vue/cli-service": "^5.0.3",
+    "@vue/cli-plugin-babel": "^5.0.4",
+    "@vue/cli-plugin-eslint": "^5.0.4",
+    "@vue/cli-plugin-router": "^5.0.4",
+    "@vue/cli-plugin-typescript": "^5.0.4",
+    "@vue/cli-plugin-unit-jest": "^5.0.4",
+    "@vue/cli-service": "^5.0.4",
     "@vue/eslint-config-standard": "^6.1.0",
     "@vue/eslint-config-typescript": "^9.1.0",
     "@vue/test-utils": "^1.1.3",
@@ -56,7 +57,7 @@
     "sass-loader": "^10.1.1",
     "ts-jest": "^27.0.4",
     "typescript": "~4.5.5",
-    "vue-cli-plugin-vuetify": "^2.4.7",
+    "vue-cli-plugin-vuetify": "^2.4.8",
     "vue-cli-plugin-workbox-pwa": "~0.1.3",
     "vue-template-compiler": "^2.6.12",
     "vuetify-loader": "^1.7.2",
